Fix Windows build incompatibilities. #168